chickadee.css
/* ... */
dt.defsig {
  padding: 0.2em 1.0em;
  background-color: #444;
  color: #fff;
  border-bottom: 1px solid black;
  font-weight: normal;
  margin: 0;
  font-size: 1em;
}

dt.defsig {
  /* Both child elements are floating, so we introduce a new
     block context so they are encapsulated. */
  overflow: hidden;
  zoom: 1;
  min-height: 0;
}
#main dt.defsig a, #main dt.defsig a:hover {
  /* avoid inherit & use #main to placate IE6/7 */
  /* font-style: inherit !important; */
  /* color: inherit !important; */
  font-style: normal;  
  color: #fff;
}
dt.defsig a:hover tt {
  border-bottom: 1px solid #fff !important;
}

dt.defsig span.type {
  float: right;
  color: #eee;
  font-size: 0.9375em;
  font-style: italic;
  font-weight: normal;
/*  border-left: 3px double black; */
}
dt.defsig span.sig {
/* monospace already set via tt */
  float: left;
}

/* dt.defsig span.sig tt {
    font-family: "Georgia", "Times New Roman", serif;
    font-size: 16px;
    letter-spacing: 0.05em;
} */

.operator {
  color: #800000;
}

/* I want to change the margin-top to padding-top but
   paragraph margins will use the padding as a baseline;
   if margin & padding is 0, then tables are not offset */
dd.defsig {
  padding-left: 1em;
  padding-right: 1em;
  margin: 0;
  margin-top: 1em;
  margin-bottom: 1em;
  background-color: #ffffff;
}

h2 {
/*  border-top: 1px solid black; */
  border-bottom: 3px double black;
}

h3 {
  border-bottom: 1px solid #808080;
}

/* section links */
#main h1 a, #main h2 a, #main h3 a, #main h4 a, #main h5 a, #main h6 a {
    font-style: normal;     /* avoid inherit to placate IE6/7 */
    color: #000;
}
#main h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
    background-color: #000;
    color: #fff;
}
/* end section links */

hr {
  border: 1px solid black;
}

table {
  border: 1px solid black;
  border-collapse: collapse;
/*  margin-left: auto;
  margin-right: auto;
*/
  margin-left: 2em;
  margin-right: 2em;
  margin-top: 0;
  margin-bottom: 0;
}
th {
  text-align: left;
  padding-left: 1em;
  padding-right: 1em;
  font-weight: bold;
  border: 1px solid black;
}
td {
  border: 1px solid black;
  padding-left: 1em;
  padding-right: 1em;
}
dl {
  margin-left: 1em;
}
dt {
  margin-top: 0.2em;
}

a {
  text-decoration: none;
  color: #000;
}

a:hover {
  color: #fff;
  background-color: #000;
}

#main a {
  color: #224;
  border-bottom: 1px solid #889;
  font-style: italic;
}
#main a:hover {
  color: #fff;
  background-color: #002;
}

#hdr h1 {
  font-size: 1em;
  padding-left: 0.3em;
  background-color: #ffffff;
  margin-bottom: 0;
  margin-top: 0;
  float: left;
}
#hdr h5 {
  display: none;
}
#hdr {
  /* BFC set elsewhere */
  border-bottom: 3px double black;
  /* box-shadow: #bbb 0px 1px 5px;  // desired box shadow, but right overflow issues */
  -webkit-box-shadow: #bbb -3px 1px 3px;  /* moz hack to prevent right overflow */
  -moz-box-shadow: #bbb -3px 1px 3px;  /* moz hack to prevent right overflow */
  box-shadow: #bbb -3px 1px 3px;
}

h1 a {
  border: none;
  font-weight: bold;
  font-style: italic;
  padding-left: 0.2em;
  padding-right: 0.2em;
}

#main td.match-path {
  /* text-align: right; */
}

#main td.match-path a, ul.contents-list a {
  border: none;
  font-weight: normal;
  font-style: italic;
}

td.match-sig {
  padding: 0;
}
#main td.match-sig a {
  display: block;
  text-decoration: none;
  border: none;
  padding-left: 1em;
  padding-right: 1em;
  font-weight: normal;
  font-style: normal;
}
td.match-sig tt {
/*  font-size: 14px; */
}

.js #contents {
 display: none;  /* unhide later */
 margin-top: 0.5em;
}

#contents ul.contents-list {
 float: left;
 *width: 100%;        /* IE7: explicit width so float children can use % width */
}
.js #contents ul.contents-list {
 display: none;
}
#contents ul.contents-list li { 
 float: left;
 width: 25%;          /* ok for 800x600 */
 *width: 24.75%;      /* IE7: avoid width overage */
 border: none;
 border-top: 1px solid #e8e8e8;  /* longer lines need lighter value; also -bottom looks terrible */
}

.csscolumns #contents ul.contents-list {
 float: none;
 -webkit-column-width: 12em;
 -webkit-column-rule: 1px solid black;
 -webkit-column-gap: 1px; /* defeat disappearing rule */
 -moz-column-width: 12em;
 -moz-column-rule: 1px solid black;
 -moz-column-gap: 1px;  /* defeat border overlapping rule */
}
.csscolumns #contents ul.contents-list li {
 float: none;
 width: 100%;
 display: inline-block;  /* fix webkit margin wrapping.  `-webkit-column-break-inside: avoid` also works */
 border: none;
 border-top: 1px solid #e8e8e8;
}

#contents.sidebar ul.contents-list {
 float: none;
}
.js #contents.sidebar ul.contents-list {
 display: block;  /* move this to @media? */
}
#contents.sidebar ul.contents-list li {
 float: none;
 width: auto;
 border: none;
 border-top: 1px solid #e8e8e8;
}
.csscolumns #contents.sidebar ul.contents-list li {  /* not sure if safe when no-csscolumns */
  width: 100%;
  display: inline-block;
}

ul.contents-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
  font-size: 14px;
}
ul.contents-list li {
  padding: 0;
  margin: 0;
  line-height: 1em;
}
/* ul.contents-list li:first-child { */
/*   border-top: none; */
/* } */
ul.contents-list li a {
  display: block;
  padding: 0.25em 0.5em;
  color: #000;
}
ul.contents-list li a:hover {
  color: #fff;
  background-color: #222;
}

/* Introduce a new "Block formatting context" (9.4.1) 
   for each of these block elements by setting
   overflow to anything other than visible.  This
   allows blocks to flow around floats.  Certain
   elts, such as table cells, get a BFC automatically. */
#main dl, #main ul, #main ol,
#main h1, #main h2, #main h3,
#main h4, #main h5, #main h6,
#hdr {
  overflow: hidden;
  /* Also set hasLayout in IE6 and IE7 */
  zoom: 1;
  min-height: 0;
}
/* New BFC for pre but allow horiz. scrollbar
   to appear rather than truncating content. */
#main pre {
  overflow: auto;
}
/* ... */

